Push for other OS

--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -2,116 +2,145 @@
 
 
 
-gui.home.title: '&bStore Home'
+gui:
+
+
+  home:
+    title: '&bStore Home'
+
+
+
+  categories:
+    title: '&bCategories'
+
+
+
+  transactions:
+    title: '&bTransactions'
+    name: '&bTransaction '
+
+
+
+  cart:
+    title: '&bYour cart'
+
+    addplayer:
+      name: '&bBuy for another player'
+
+    addplayer:
+      1: '&bPurchase your packages for'
+      2: '&bMultiple players at once'
+
+    packs:
+      name: '&bAdd a package to the cart'
+
+    skull:
+      addplayer:
+        1: '&bAdd players in'
+        2: '&bthe next slot'
+
+    confirm:
+      success: '&aContinue with purchase'
+      error: '&cError'
+
+      success:
+        1: '&bYou will be able to add'
+        2: '&bcoupons and select payment next'
+
+      noplayers:
+        1: '&cAdd at least one'
+        2: '&cplayer to purchase for'
+
+      nopackages:
+        1: '&cAdd at least one'
+        2: '&cpackage to purchase'
+
+
+
+  loading:
+    title: '&bLoading...'
+    item:
+      name: '&aPlease wait - Loading'
+
+
+
+  add-to-cart:
+    title: '&bAdd to cart'
+    confirm: '&aClick to add to cart!'
+    quantity:
+      add: '&bIncrease quantity by 1'
+      minus: '&bDecrease quantity by 1'
+
+
+
+  add-player-to-cart:
+    title: '&bAdd player to cart'
+    name: 'Name/UUID'
+    lore: 'Type player''s name or UUID'
+    notfound: '&cPlayer was not found!'
+
+
+
+  cart-confirm:
+    title: '&bConfirm cart'
+
+
+
+  packages:
+    list:
+      title: '&bPackages'
+
+
+
+  generic:
+    clicktoclose: 'Click to close'
 
 
 
 
-gui.categories.title: '&bCategories'
+store:
+  cart: '&bShopping Cart'
+  categories: '&bCategories'
+  transactions: '&bYour transactions'
+  featured: '&bFeatured packages'
+  current-cost: '&bCurrent cost: &a$'
+  purchase-for: '&bPurchasing for:'
+  see-description: '&bLeft Click to see description'
+  add-to-cart: '&bRight click to add to cart'
+  remove-from-cart: '&cRight click to remove from cart'
+  remove-player: '&cClick to remove player'
 
 
 
 
-gui.transactions.title: '&bTransactions'
-gui.transactions.name: '&bTransaction '
+chat:
+  not-viewing-package: '&cYou''re not viewing a package!\nStop clicking things!'
+
+  package:
+    header: '&b||===============||'
+    title: '&dTitle: &b'
+    id: '&dID: &b'
+    description: '&dDescription: &b'
+    quantity: '&dQuantity: &d'
+    price: '&dPrice: &a$&d'
+    permission:
+      allow: '&aYou have permission to purchase this package!'
+      deny: '&cYou do not have permission to purchase this package!'
+    return:
+      text: '&b&lClick here to return to the store!'
+      tooltip: '&bClick to return!'
+    footer: '&b||===============||'
 
 
 
 
-gui.cart.title: '&bYour cart'
-
-gui.cart.addplayer.name: '&bBuy for another player'
-gui.cart.addplayer.1: '&bPurchase your packages for'
-gui.cart.addplayer.2: '&bMultiple players at once'
-
-gui.cart.packs.name: '&bAdd a package to the cart'
-
-gui.cart.skull.addplayer.1: '&bAdd players in'
-gui.cart.skull.addplayer.2: '&bthe next slot'
-
-gui.cart.confirm.success: '&aContinue with purchase'
-gui.cart.confirm.error: '&cError'
-
-gui.cart.confirm.success.1: '&bYou will be able to add'
-gui.cart.confirm.success.2: '&bcoupons and select payment next'
-
-gui.cart.confirm.noplayers.1: '&cAdd at least one'
-gui.cart.confirm.noplayers.2: '&cplayer to purchase for'
-
-gui.cart.confirm.nopackages.1: '&cAdd at least one'
-gui.cart.confirm.nopackages.2: '&cpackage to purchase'
-
-
-
-
-
-gui.add-to-cart.title: '&bAdd to cart'
-gui.add-to-cart.confirm: '&aClick to add to cart!'
-gui.add-to-cart.quantity.add: '&bIncrease quantity by 1'
-gui.add-to-cart.quantity.minus: '&bDecrease quantity by 1'
-
-
-
-
-gui.add-player-to-cart.title: '&bAdd player to cart'
-gui.add-player-to-cart.notfound: '&cPlayer was not found!'
-
-
-
-
-gui.cart-confirm.title: '&bConfirm cart'
-
-
-
-
-
-gui.packages.list.title: '&bPackages'
-
-
-
-
-gui.generic.clicktoclose: 'Click to close'
-
-
-
-
-store.cart: '&bShopping Cart'
-store.categories: '&bCategories'
-store.transactions: '&bYour transactions'
-store.featured: '&bFeatured packages'
-store.current-cost: '&bCurrent cost: &a$'
-store.purchase-for: '&bPurchasing for:'
-store.see-description: '&bLeft Click to see description'
-store.add-to-cart: '&bRight click to add to cart'
-store.remove-from-cart: '&cRight click to remove from cart'
-store.remove-player: '&cClick to remove player'
-
-
-
-
-chat.not-viewing-package: '&cYou''re not viewing a package!\nStop clicking things!'
-
-chat.package.header: '&b||===============||'
-chat.package.title: '&dTitle: &b'
-chat.package.id: '&dID: &b'
-chat.package.description: '&dDescription: &b'
-chat.package.quantity: '&dQuantity: &d'
-chat.package.price: '&dPrice: &a$&d'
-chat.package.permission.allow: '&aYou have permission to purchase this package!'
-chat.package.permission.deny: '&cYou do not have permission to purchase this package!'
-chat.package.return: '&b&lClick here to return to the store!'
-chat.package.return.tooltip: '&bClick to return!'
-chat.package.footer: '&b||===============||'
-
-
-
-
-generic.back: 'Back'
-generic.name: 'Name'
-generic.uuid: 'UUID'
-generic.noone: 'No one'
-generic.cost: 'Cost'
-generic.error: 'Error'
+generic:
+  back: 'Back'
+  name: 'Name'
+  uuid: 'UUID'
+  noone: 'No one'
+  cost: 'Cost'
+  error: 'Error'
 
 
 
